[package]
name = "mcl-rs"
version = "0.1.0"
authors = ["Polykarpos Thomadakis <polykarpos.thomadakis@pnnl.gov>", "Ryan D. Friese <ryan.friese@pnnl.gov>"]
edition = "2021"
description = "This system crate provides high-level rust language bindings to the Minos Compute Library (MCL)"
repository = "https://github.com/pnnl/mcl"
license-file = "LICENSE"
keywords = ["heterogeneous","gpu","fpga","hpc","runtime"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
rand = "0.8.3"

[dependencies]
libmcl-sys = "0.1.0"
serde={version = "1.0.126", features = ["derive"] }
async-std = {version = "0.99.3", features = ["unstable"]}

[features]
versal=[]
