[package]
name = "mcl-rs"
version = "0.2.0-beta"
authors = ["Polykarpos Thomadakis <polykarpos.thomadakis@pnnl.gov>", "Ryan D. Friese <ryan.friese@pnnl.gov>"]
edition = "2021"
description = "This system crate provides high-level rust language bindings to the Minos Compute Library (MCL)"
repository = "https://github.com/pnnl/mcl"
license-file = "LICENSE"
keywords = ["heterogeneous","gpu","fpga","hpc","runtime"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
rand = "0.8.3"
futures = "0.3.6"
rustfft = "6.1.0"
fork = "0.1.20"

[dependencies]
libmcl-sys = {version = "0.1.2-rc", path = "../libmcl-sys"}
paste = "1.0"
serde={version = "1.0.126", features = ["derive"] }
async-std = {version = "0.99.3", features = ["unstable"]}
bitflags = "1.3.2"

[features]
shared_mem=["libmcl-sys/shared_mem"]
pocl_extensions=["libmcl-sys/pocl_extensions"]
docs-rs = ["libmcl-sys/docs-rs"]
mcl_debug = ["libmcl-sys/mcl_debug"]

[profile.release]
opt-level=3
lto=true
codegen-units=1
debug = true
rpath = true

[package.metadata.docs.rs]
features = [ "docs-rs" ] # This feature will be enabled during the docs.rs bui
